<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.centralside.dashboard">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2"
        tools:layout_editor_absoluteX="432dp"
        tools:layout_editor_absoluteY="222dp" />


    <Button
        android:id="@+id/debugBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="212dp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/editText" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="550dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/notched_compass"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/arrow" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:inputType="textUri"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/url"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horizontal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vertical"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2" />

</android.support.constraint.ConstraintLayout>
